2014-01-02 arne

	* add CDrawContext::createTextPath(..) and Quartz implementation
	* add text rotation to CParamDisplay
	* fix console output message about font creation on OS X 10.9

2013-12-30 arne

	* change CGradient to support more than only a start and end color
	* add CDrawContext::fillRadialGradient method
	* added a debug message when the gradient draw methods are used with GDI+ as they produce different results than the Direct2D and Quartz implementations
	* fix fractional mouse wheel messages on Windows

2013-12-20 arne

	* removed ATSUI font handling as CoreText is supported since 10.5
	* optimize string drawing on Mac OS X by caching the CoreText Line between calls to getStringWidth and drawString
	* add support for adding a custom view to the split view separator
	* fix compiling with the Mac OS X 10.6 SDK

== VSTGUI 4.2 Release ==

2013-10-21 arne

	* removed support for Mac OS X 10.4
	* add CLayeredViewContainer + platform implementation for iOS and OSX (QuartzCore is now required)
	* CGraphicsPath::hitTest implementation for D2D and GDI+
	
2013-10-18 arne

	* add relative touch mode to CSlider

2013-10-15 yvan

	* remove warning for missing casting (double to float)
	* change #include <Windows.h> to #include <windows.h>
	
2013-10-14 arne

	* add onMouseCancel () to CView to support touch canceling and maybe later ESC-Key canceling of mouse tracking
	* implement onMouseCancel() on a few of controls

2013-10-04 arne

	* add path hit testing support into CView
	* add hitTest method to CGraphicsPath (Quartz implementation only currently)
	* add CSlider::kAlwaysUseZoomFactor to make the zoom modifier mode the default

2013-09-10 arne

	* add iOS CTextEdit support
	* add experimental COpenGLView support for iOS (currently not enabled)

2013-08-06 arne

	* add iOS support (without CTextEdit and COptionMenu support for now)
	* add multi-touch support (iOS implementation only for now)

2013-05-29 arne
