@@ -197,7 +197,8 @@ CGraphicsPath* D2DDrawContext::createGraphicsPath ()
 //-----------------------------------------------------------------------------
 CGraphicsPath* D2DDrawContext::createTextPath (const CFontRef font, UTF8StringPtr text)
 {
-	return 0;
+ 	const D2DFont* ctFont = dynamic_cast<const D2DFont*>(font->getPlatformFont ());
+ 	return ctFont ? new D2DGraphicsPath (ctFont, text) : 0;
 }
 
 //-----------------------------------------------------------------------------
